src/test/ui/feature-gates/feature-gate-repr128.stderr
error[E0658]: repr with 128-bit type is unstable
  --> $DIR/feature-gate-repr128.rs:2:1
   |
LL | / enum A {
LL | |     A(u64)
LL | | }
   | |_^
   |
   = note: see issue #56071 <https://github.com/rust-lang/rust/issues/56071> for more information
   = help: add `#![feature(repr128)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
