src/test/ui/feature-gates/feature-gate-repr128.rs
#[repr(u128)]
enum A { //~ ERROR repr with 128-bit type is unstable
    A(u64)
}

fn main() {}
